# safecopy

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  NEWS  README  configure  configure.in  specification.txt
simulator/: Makefile.in  autogen.sh  config.h.in  configure  configure.in
simulator/src/: Makefile.in  simulatorlb.c
src/: Makefile.in  arglist.c  arglist.h  lowlevel.c  lowlevel.h  safecopy.1  safecopy.c  textlist.c  textlist.h  voidlist.c  voidlist.h
test/: README  config_in.sh  libtestsuite.sh  test.sh
test/test0/: simulator.cfg  test.sh
test/test1/: test.sh
test/test10/: simulator.cfg  test.sh  test1.badblocks  test3.badblocks  xblocks
test/test11/: test.sh  test3.badblocks  xblocks
test/test12/: simulator.cfg  test.sh
test/test13/: simulator.cfg  test.sh
test/test2/: simulator.cfg  test.sh
test/test3/: simulator.cfg  test.sh
test/test4/: simulator.cfg  test.sh
test/test5/: simulator.cfg  test.sh
test/test6/: simulator.cfg  test.sh  test2.badblocks  test3.badblocks
test/test7/: test.sh  test1.badblocks  test3.badblocks
test/test8/: test.sh  test2.badblocks
test/test9/: simulator.cfg  test.sh  test2.badblocks  test3.badblocks  xblocks
